tests/errors/semantic/non_blocking/UNKNOWN_IMPORT2.py
# pylint: disable=missing-function-docstring, missing-module-docstring, unused-import
import abc
